src/components/GalleryBox/GalleryBox.css
.gallery-box {
    display: flex;
    width: 70%;
    flex-direction: column;
    gap: 3vh;
    /* height: 70vh; */
    margin-top: 15vh;
}

.gallery-box img {
    opacity: 0.7;
    transition: opacity 0.4s ease-in-out;
}

.gallery-box img:hover {
    opacity: 1;
}

.bottom-box {
    /* outline: 1px solid red; */
    display: grid;
    grid-template-columns: 66.3% 30%;
    width: 100%;
    gap: 1vw;
    height: 40vh;
    overflow: hidden;
    justify-items: center;
    position: relative;
}

.top-box {
    /* outline: 1px solid red; */
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    justify-items: center;
    height: 40vh;
    overflow: hidden;
    gap: 1vw
}

.gallery-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.gallery-title h1 {
    font-size: 3vw;
    background: linear-gradient(90deg, rgba(255, 255, 255, 0.60) 6.63%, rgba(255, 255, 255, 0.00) 155.02%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    letter-spacing: 1.5vw;
}

.gallery-title h3 {
    background: linear-gradient(90deg, rgba(255, 255, 255, 0.60) 6.63%, rgba(255, 255, 255, 0.00) 155.02%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-size: 1.6vw;
    letter-spacing: 0.4vw;
}

.top-box .image-left, 
.top-box .image-between, 
.top-box .image-last {
    overflow: hidden;
    /* height: 100%; */
    width: 100%;
}

.top-box .image-left img, 
.top-box .image-between img, 
.top-box .image-last img {
    /* outline: 1px solid red; */
    height: 100%;
    width: 100%;
    object-fit: cover;
}

.bottom-box .large-image, .bottom-box .small-image {
    display: flex;
    width: 100%;
}

.bottom-box .large-image img, .bottom-box .large-image img {
    width: 100%;
    object-fit: cover;
    object-position: 6px -950px;
}

.image-between {
    display: flex;
    flex-direction: column;
    gap: 2vh 
}

.between-img {
    overflow: hidden;
}

.circle-image img {
    opacity: 1 !important;
}

.circle-image {
    width: 12vw;
    height: 12vw;
    position: absolute;
    right: 17vw;
    overflow: hidden;
    top: 5vw;
    border-radius: 50%;
    outline: 1vw solid black;
    z-index: 50;
}

.circle-image img {
    object-fit: cover;
    /* width: 100%; */
    aspect-ratio: 1;
}

.gallery-modal {
    position: fixed;
    top: 0;
    left: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.571);
    z-index: 9999;
}

.gallery-modal button {
    position: absolute;
    right: 5vw;
    top: 5vh;
    padding: 2vh 1vw;
    background-color: transparent;
    border: none;
    /* outline: 1px solid white; */
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.gallery-modal button span {
    background-color: white;
    height: 1px;
    width: 1vw;
}

.gallery-modal button > span:first-child {
    transform: rotate(-45deg);
}
.gallery-modal button > span:last-child {
    transform: rotate(45deg);
}

.gallery-modal img {
    width: 100%;
    height: 80vh;
    object-fit: contain;
}

@media screen and (max-width: 768px) {
    .gallery-title h1 {
        font-size: 3rem;
        line-height: 50px;
    }
    .top-box .image-left img, 
    .top-box .image-between img, 
    .top-box .image-last img {
        /* height: unset; */
        width: unset;
    }
    .top-box, .bottom-box {
        height: 20vh;
    }
    .circle-image {
        width: 7rem;
        height: 7rem;
        right: 3.5rem
    }
    .gallery-modal button span {
        width: 2rem;
    }
    .gallery-modal button > span:last-child {
        transform: rotate(45deg) translateX(-6%);
    }
}

